@@ -2,6 +2,8 @@ src/macosx/config_common.h
 src/macosx/English.lproj/InfoPlist.strings
 MacOS/Armagetron Advanced.xcodeproj/*.mode1v3
 MacOS/Armagetron Advanced.xcodeproj/*.pbxuser
+MacOS/Armagetron Advanced.xcodeproj/project.xcworkspace/
+MacOS/Armagetron Advanced.xcodeproj/xcuserdata/
 MacOS/build/
 macosx_build_information.yml
 *.DS_Store
@@ -60,3 +62,6 @@ leak.log
 memprofile1.txt
 memprofile2.txt
 a.out.dSYM
+src/armagetronad_main_master
+src/doc/COPYING.txt
+rubbish
